# zkaidi19.github.io

./: .gitignore  404.html  DEPLOYMENT.md  README.md  about.html  app.py  build_static.py  contact.html  education.html  index.html  pyproject.toml  run.py  start.sh
.github/workflows/: build-and-deploy.yml
api/: resume.json
docs/: about.html  activities.html  education.html  index.html  skills.html
docs/static/css/: style.css
static/js/: script.js
templates/: about.html  activities.html  base.html  contact.html  education.html  index.html  skills.html
